[package]
name = "qls-proto-utils"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["filipton <filipton12@gmail.com>"]
description = "Simple crate for low-level protocol parsing (for now SNI and QUIC initial packet)"
repository = "https://github.com/filipton/qls-proto-utils"

[lib]

[dependencies]
hkdf = "0.12.4"
aes = "0.8.4"
sha2 = "0.10.8"
hex-literal = "0.4.1"
aes-gcm = "0.10.3"
hex = "0.4.3"
