[package]
name = "qls-proto-utils"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["filipton <filipton12@gmail.com>"]
description = "Simple crate for low-level protocol parsing (for now SNI and QUIC initial packet)"
repository = "https://github.com/filipton/qls-proto-utils"

[lib]

[dependencies]
hkdf = { version = "0.12.4", default-features = false }
aes = { version  = "0.8.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
hex-literal = "0.4.1"
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
